--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,8 +2,12 @@ env:
   es6: true
   browser: true
   commonjs: true
+  jest: true
 
 extends: ['htmlacademy/es6', 'plugin:react/recommended']
+
+rules:
+    indent: ["error", 4] 
 
 parserOptions:
   ecmaFeatures:
